fix: resolve critical bugs and add comprehensive features
- Fix regional routing for Riot API with proper americas/europe/asia endpoints
- Resolve champion assistant crashes with array validation and error handling
- Add comprehensive AIChatbot component with League knowledge base
- Remove outdated Chatbot component to prevent conflicts
- Add deployment configuration with Docker and scripts
- Enhance error boundaries and data sanitization
- Add comprehensive documentation and attribution
- Fix active users counter and Twitch demo mode

--- a/League of legends helper/.env.example
+++ b/League of legends helper/.env.example
@@ -1,2 +1,57 @@
+# League of Legends Assistant - Environment Configuration
+# Copy this file to .env and fill in your values
+
+# === REQUIRED CONFIGURATION ===
+
+# Riot Games API Key (Required)
+# Get your API key from: https://developer.riotgames.com/
+# Development keys expire after 24 hours
+# Production keys require application approval
 RIOT_API_KEY=your-riot-api-key-here
+
+# === OPTIONAL CONFIGURATION ===
+
+# Environment mode
+NODE_ENV=development
+
+# Server ports
+PORT=3000
+PROXY_PORT=3001
+
+# === DEVELOPMENT SETTINGS ===
+
+# Enable debug logging
+DEBUG=false
+
+# API rate limiting (requests per second)
+RATE_LIMIT=20
+
+# === PRODUCTION SETTINGS ===
+
+# For production deployment, set:
+# NODE_ENV=production
+# And ensure your RIOT_API_KEY is a production key
+
+# === TWITCH INTEGRATION (Optional) ===
+
+# Twitch chat integration (optional)
+# If not provided, demo mode will be available
+TWITCH_CLIENT_ID=your-twitch-client-id
+TWITCH_CLIENT_SECRET=your-twitch-client-secret
+
+# === SECURITY SETTINGS ===
+
+# CORS origins (comma-separated)
+# CORS_ORIGINS=http://localhost:3000,https://yourdomain.com
+
+# API request timeout (milliseconds)
+# REQUEST_TIMEOUT=5000
+
+# === MONITORING ===
+
+# Health check interval (seconds)
+# HEALTH_CHECK_INTERVAL=30
+
+# Log level (error, warn, info, debug)
+# LOG_LEVEL=info
 PORT=3001
